se agregaron y ajustaron los endpoints
